syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

enum FriendOnlineState {
	FRIEND_ONLINE_STATE_FREIEND_DISCONNECT = 0;
	FRIEND_ONLINE_STATE_ONLINE = 1;
}
